micro-office/docs/versions/V1.1.13/overview.md
# V1.1.13 概览（节点定义独立化，工作流仅保存引用结构）

## 1. 版本目标

- 把“节点设计”和“工作流设计”彻底拆开。
- 节点设计只负责节点资产本身，不再关心任何工作流。
- 工作流设计不再往节点表里写“引用节点副本”，只保存“引用了哪些节点、怎么排布”的结构。
- 不新增任何新表，只在现有表基础上调整职责与存储口径。

## 2. 现状基线

- 当前系统的节点定义数据仍落在 `mo_workflow_recommendation_package_nodes`。
- 当前工作流模板主表为 `mo_workflow_recommendation_packages`，已存在 `meta jsonb` 字段。
- 当前旧实现路径仍把工作流节点保存在 `mo_workflow_recommendation_package_nodes`，导致：
  - 节点设计与工作流编排耦合
  - 工作流页面承担了“定义节点”和“编排节点”两种职责
  - 独立节点设计接口与数据库旧外键口径冲突

## 3. 本版设计结论

### 3.1 节点定义层

节点定义层只负责节点资产本身，数据继续落在：

- `mo_workflow_recommendation_package_nodes`

但本版固定口径为：

- 这张表只承载“节点定义”
- 不再承载“某个工作流里的节点引用记录”

节点定义负责：

- 节点名称
- 节点编码 `code`
- 节点类型 `nodeType`
- 输入字段
- 输出字段
- 推荐模板

### 3.2 工作流编排层

工作流编排层只负责：

- 当前工作流引用了哪些节点
- 节点之间的层级与顺序关系
- 并行组如何表达

数据落点改为：

- `mo_workflow_recommendation_packages.meta`
- 工作流节点图接口主路径固定为：
  - `GET /api/admin/workflow-templates/packages/{id}/node-graph`
  - `PUT /api/admin/workflow-templates/packages/{id}/node-graph`

本版建议的标准字段：

```json
{
  "nodeGraph": [
    ["nodeid1"],
    ["nodeid2"],
    ["nodeid3", "nodeid4"],
    ["nodeid5"]
  ]
}
```

语义：

- 外层数组：流程层级顺序
- 内层数组：同一层中的节点
- 单元素数组：串行节点
- 多元素数组：同层并行节点

### 3.3 工作流不再写节点副本

本版明确禁止：

- 在 `mo_workflow_recommendation_package_nodes` 中为某个工作流再写一份“引用节点副本”
- 通过 `package_id` 区分“节点定义”和“工作流引用”

## 4. 为什么改成这版

你要的核心不是“把节点设计页单独做出来”，而是：

- 节点设计时完全不用管工作流
- 工作流只保存引用结构

如果继续让节点表同时保存“定义”和“引用”，虽然技术上能做，但产品模型还是脏的。

这版更符合真实边界：

1. 节点是资产
2. 工作流是编排 JSON
3. 前端画布消费的是工作流引用结构
4. 后端装配时按引用结构再去查节点定义

## 5. 表职责重组

### 5.1 `mo_workflow_recommendation_package_nodes`

最终职责：

- 节点定义主表

不再负责：

- 工作流里的节点引用记录

### 5.2 `mo_workflow_template_node_input_fields`

职责：

- 节点定义输入字段

### 5.3 `mo_workflow_template_node_output_fields`

职责：

- 节点定义输出字段

### 5.4 `mo_workflow_template_node_recommendations`

职责：

- 节点定义推荐模板关系

### 5.5 `mo_workflow_recommendation_packages`

职责：

- 工作流模板主表
- `meta.nodeGraph` 承载工作流引用结构

### 5.6 `mo_workflow_recommendation_package_positions`

职责：

- 工作流模板适用岗位关系

## 6. In / Out

### In Scope

- 节点定义完全独立于工作流设计
- 工作流编排保存为 `meta.nodeGraph`
- 前端按 `nodeGraph` 渲染工作流画布
- 后端按 `nodeGraph` + 节点定义装配工作流详情
- 不新增表前提下收敛职责

### Out of Scope

- 不新增节点引用关系表
- 不把工作流引用继续落到节点表
- 不兼容上一轮“节点表双语义”方案
- 不保留工作流页直建节点的旧后门

## 7. 页面与交互原则

### 7.1 节点设计页

- 只管理节点定义
- 不展示“属于哪个工作流”
- 不要求先创建工作流

### 7.2 工作流设计页

- 添加节点时，只从节点库中选节点
- 保存时只提交 `nodeGraph`
- 前后端主交互只走 `/node-graph` 专用接口
- 前端画布完全由 `nodeGraph` 驱动
- 不再提交节点定义字段

## 8. 依赖顺序

1. 数据库线程先确认节点表回归“只存节点定义”，并给出 `meta.nodeGraph` 的数据库口径与校验方案。
2. 后端线程将工作流节点保存链路改为读写 `mo_workflow_recommendation_packages.meta.nodeGraph`。
3. 前端线程将工作流画布改为消费 `nodeGraph`，不再消费工作流节点副本列表。
4. 测试线程验证节点页与工作流页彻底解耦。

## 9. 关键风险

1. **后端继续往节点表写工作流引用副本**
   - 会直接违背本版目标。

2. **前端仍把工作流节点当成独立实体列表保存**
   - 会让 `nodeGraph` 方案落不实。

3. **`meta.nodeGraph` 结构无校验**
   - 会导致脏结构进入数据库，后续装配困难。

4. **核心文档未同步**
   - 当前 `docs/api-design.md` 中仍残留旧口径时，执行线程必须以本版版本文档为准。

5. **接口主路径不唯一**
   - 如果一部分代码走 `GET/PUT /packages/{id}`，另一部分代码走 `/node-graph`，联调会继续混乱。

## 10. 验收口径

- 可以独立创建节点定义，不依赖任何工作流。
- 工作流模板保存时不再往节点表写引用节点记录。
- 工作流模板详情中能稳定返回 `nodeGraph`。
- 前端可按 `nodeGraph` 渲染串行/并行结构。
- 本版不新增任何新表。
